@@ -68,11 +68,11 @@ MediaControlSkin.includes=src/.svn/all-wcprops\
 ,unittests/org/jvoicexml/jsapi2/.svn/entries\
 ,unittests/org/jvoicexml/jsapi2/.svn/prop-base/DummyAudioManager.java.svn-base\
 ,unittests/org/jvoicexml/jsapi2/.svn/text-base/DummyAudioManager.java.svn-base\
-,unittests/org/jvoicexml/jsapi2/DummyAudioManager.java\
+,unittests/org/jvoicexml/jsapi2/test/DummyAudioManager.java\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/all-wcprops\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/entries\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/text-base/StateTransitionTest.java.svn-base\
-,unittests/org/jvoicexml/jsapi2/states/StateTransitionTest.java\
+,unittests/org/jvoicexml/jsapi2/synthesis/SynthesizerStateTransitionTest.java\
 ,unittests/org/jvoicexml/jsapi2/synthesis/.svn/all-wcprops\
 ,unittests/org/jvoicexml/jsapi2/synthesis/.svn/entries\
 ,unittests/org/jvoicexml/jsapi2/synthesis/.svn/prop-base/BaseSynthesizerPropertiesTest.java.svn-base\
@@ -92,8 +92,8 @@ MediaControlSkin.includes=src/.svn/all-wcprops\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/all-wcprops\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/entries\
 ,unittests/org/jvoicexml/jsapi2/states/.svn/text-base/StateTransitionTest.java.svn-base\
-,unittests/org/jvoicexml/jsapi2/states/StateTransitionTest.java\
-,unittests/org/jvoicexml/jsapi2/DummySpeechEventExecutor.java\
+,unittests/org/jvoicexml/jsapi2/synthesis/SynthesizerStateTransitionTest.java\
+,unittests/org/jvoicexml/jsapi2/test/DummySpeechEventExecutor.java\
 
 MediaControlSkin.excludes=\
 
